--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version "$springBootVersion"
+    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
+    id 'org.liquibase.gradle' version "$liquibaseVersion"
 }
 
 group 'org.testmanager'
@@ -10,8 +13,16 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springDataVersion"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    compileOnly "org.projectlombok:lombok:${lombok}"
+    annotationProcessor "org.projectlombok:lombok:${lombok}"
+    implementation "org.postgresql:postgresql:$postgresqlVersion"
+    liquibaseRuntime "org.liquibase:liquibase-core:$liquibaseCoreVersion"
+    liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.1.1'
+    liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:4.2.2'
 }
 
 test {
