--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version "$springBootVersion"
     id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"
-    id 'org.liquibase.gradle' version "$liquibaseVersion"
+    //id 'org.liquibase.gradle' version "$liquibaseVersion"
 }
 
 group 'org.testmanager'
@@ -15,14 +15,13 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springDataVersion"
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     compileOnly "org.projectlombok:lombok:${lombok}"
     annotationProcessor "org.projectlombok:lombok:${lombok}"
     implementation "org.postgresql:postgresql:$postgresqlVersion"
-    liquibaseRuntime "org.liquibase:liquibase-core:$liquibaseCoreVersion"
-    liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:2.1.1'
-    liquibaseRuntime 'org.liquibase.ext:liquibase-hibernate5:4.2.2'
+    implementation "org.liquibase:liquibase-core:$liquibaseCoreVersion"
 }
 
 test {
