--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation "org.springframework.boot:spring-boot-starter-data-jpa:$springDataVersion"
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     compileOnly "org.projectlombok:lombok:${lombok}"
     annotationProcessor "org.projectlombok:lombok:${lombok}"
     implementation "org.postgresql:postgresql:$postgresqlVersion"
     implementation "org.liquibase:liquibase-core:$liquibaseCoreVersion"
+    implementation "org.mapstruct:mapstruct:$mapstructVersion"
+    annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
+    testAnnotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
